fix: horizontal scroll (#29)

--- a/src/components/decision-graph/dg.scss
+++ b/src/components/decision-graph/dg.scss
@@ -484,10 +484,6 @@
     background: transparent;
   }
 
-  .grl-dt__container {
-    padding-bottom: 2.75rem;
-  }
-
   .edge-renderer {
     position: absolute;
     display: flex;
